tests/auto/qml/qqmllanguage/testtypes.cpp
@@ -160,6 +160,8 @@ void registerTypes()
     qmlRegisterTypesAndRevisions<Greeter>("QmlOtherThis", 1);
     qmlRegisterTypesAndRevisions<BirthdayParty>("People", 1);
     qmlRegisterTypesAndRevisions<AttachedInCtor>("Test", 1);
+
+    qmlRegisterTypesAndRevisions<ByteArrayReceiver>("Test", 1);
 }
 
 QVariant myCustomVariantTypeConverter(const QString &data)
